--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,22 @@
 <h1>Post</h1>
+<!-- 顯示post -->
+<table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th>Replies count</th>
+      <th>Title</th>
+      <th>Last replied at</th>
+      <th>Viewed count</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td scope="row"><%= post.replies_count %></td>
+        <td><%= post.title %></td>
+        <td><%= post.created_at %></td>
+        <td><%= post.viewed_count %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
