--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,30 +3,31 @@
   <h1>Site Name</h1>
   </div>
 </div>
-  <div class="row-padding">
+<div class="row-padding">
 <!-- category button -->
 
 <!-- 顯示post -->
-    <table class="table">
-      <thead class="thead-dark">
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th>Replies count</th>
+        <th>Title</th>
+        <th>Last replied at</th>
+        <th>Viewed count</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @posts.each do |post| %>
         <tr>
-          <th>Replies count</th>
-          <th>Title</th>
-          <th>Last replied at</th>
-          <th>Viewed count</th>
+          <td scope="row"><%= post.replies_count %></td>
+          <td><%= link_to post.title, post_path(post) %></td>
+          <td><%= post.created_at.strftime('%Y-%m-%d') %></td>        
+          <td><%= post.viewed_count %></td>
         </tr>
-      </thead>
-      <tbody>
-        <% @posts.each do |post| %>
-          <tr>
-            <td scope="row"><%= post.replies_count %></td>
-            <td><%= link_to post.title, post_path(post) %></td>
-            <td><%= post.created_at.strftime('%Y-%m-%d') %></td>        
-            <td><%= post.viewed_count %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+      <% end %>
+    </tbody>
+  </table>
+  <!-- kaminari -->
+  <%= paginate @posts %>
 </div>
 
