--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,11 @@
+<% if @post.errors.any? %>
+<h2>We have some error here!</h2>
+  <ul>
+    <% @post.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  </ul>
+<% end %>
+
 <br>
 <div class="container">
   <%= form_for(@post) do |f| %>
@@ -10,6 +18,25 @@
     <div class="form-group">
       <%= image_tag @post.image , width: "200px", height: "200px" if @post.image? %>
       <%= f.file_field :image %>
+    </div>
+    <div class="form-group">
+      <div class="col-md-2"><%= "Who can see" %></div>
+      <div class="col-md-10">
+        <span class="glyphicon glyphicon-unchecked"></span><%= "   All" %>
+        <span class="glyphicon glyphicon-unchecked"></span><%= "   Friend" %>
+        <span class="glyphicon glyphicon-unchecked"></span><%= "   Myself" %>        
+      </div>        
+    </div>
+    <div class="form-group">
+      <div class="col-md-2"><%= "Category" %></div>
+      <div class="col-md-10">
+        <span class="glyphicon glyphicon-unchecked"></span><%= "   All" %>
+        <span class="glyphicon glyphicon-unchecked"></span><%= "   Friend" %>
+        <span class="glyphicon glyphicon-unchecked"></span><%= "   Myself" %>        
+      </div>        
+    </div>
+    <div class="form-group">
+      <div class="col-md-12"><%= "Status: " %></div>
     </div>
     <div class="form-group">
       <%= f.submit %>
