--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,8 +21,11 @@
         <tr>
           <td scope="row"><%= post.replies_count %></td>
           <td><%= link_to post.title, post_path(post) %></td>
-          <td><%= post.created_at.strftime('%Y-%m-%d') %></td>        
+          <td><%= post.created_at.strftime('%Y-%m-%d') %></td> 
           <td><%= post.viewed_count %></td>
+          <td><%= link_to 'Show', post_path(post) %></td>
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
+          <td><%= link_to 'Delete', post_path(post), method: :delete, data: {confirm:"Are you sure?"} %></td>
         </tr>
       <% end %>
     </tbody>
