--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,7 +2,8 @@
 <h2>We have some error here!</h2>
   <ul>
     <% @post.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
+      <li><%= msg %></li>
+    <% end %>
   </ul>
 <% end %>
 
@@ -16,7 +17,7 @@
       <p><%= f.text_area :description, size: "136x15", placeholder: "Post Description" %></p>
     </div>
     <div class="form-group">
-      <%= image_tag @post.image , width: "200px", height: "200px" if @post.image? %>
+      <%= image_tag @post.image.url , width: "200px", height: "200px" if @post.image? %>
       <%= f.file_field :image %>
     </div>
     <div class="form-group">
