--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -10,6 +10,8 @@
     <div class="form-group">
       <%= image_tag @post.image.url, width: "400px", height: "300ox" if @post.image? %>
       <%= f.file_field :image %>
+      <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>         
+
     </div>
     <div class="form-group">
       <%= f.submit %>
