--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -20,27 +20,26 @@
       <%= image_tag @post.image.url , width: "200px", height: "200px" if @post.image? %>
       <%= f.file_field :image %>
     </div>
+<!-- who can see -->
     <div class="form-group">
       <div class="col-md-2"><%= "Who can see" %></div>
-      <div class="col-md-10">
-        <span class="glyphicon glyphicon-unchecked"></span><%= "   All" %>
-        <span class="glyphicon glyphicon-unchecked"></span><%= "   Friend" %>
-        <span class="glyphicon glyphicon-unchecked"></span><%= "   Myself" %>        
+      <div class="col-md-10">....
       </div>        
     </div>
+<!-- category checkbox -->
     <div class="form-group">
       <div class="col-md-2"><%= "Category" %></div>
       <div class="col-md-10">
-        <span class="glyphicon glyphicon-unchecked"></span><%= "   All" %>
-        <span class="glyphicon glyphicon-unchecked"></span><%= "   Friend" %>
-        <span class="glyphicon glyphicon-unchecked"></span><%= "   Myself" %>        
+        <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>          
       </div>        
     </div>
     <div class="form-group">
       <div class="col-md-12"><%= "Status: " %></div>
     </div>
     <div class="form-group">
-      <%= f.submit %>
+      <br>
+      <div class="col-md-2"></div>
+      <div class="col-md-4"><%= f.submit %></div>
     </div>
   <% end %>
 </div>
