Add form on index page for creating new category

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -4,6 +4,14 @@
       <%= link_to 'Category List', admin_categories_path %>
     </div>
     <div class="col-md-12">
+      <div class="form-inline">
+        <%= form_for [:admin, @category] do |f| %>
+          <div class="form-group">
+            <%= f.text_field :name, placeholder: "Category name" %>
+          </div>
+          <%= f.submit class:"btn btn-primary" %>
+        <% end %>
+      </div>
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
@@ -12,11 +20,11 @@
           </tr>
         </thead>
         <tbody>
-          <% @categories.each do |category| %>
+        <% @categories.each do |category| %>
           <tr>
             <td><%= category.name %></td>              
           </tr>
-          <% end %>
+        <% end %>
         </tbody>
       </table>
     </div>
