--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -22,7 +22,10 @@
         <tbody>
         <% @categories.each do |category| %>
           <tr>
-            <td><%= category.name %></td>              
+            <td><%= category.name %></td>
+            <td>
+              <%= link_to 'Edit', admin_categories_path(id:category.id) %>
+            </td>              
           </tr>
         <% end %>
         </tbody>
