--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -3,6 +3,7 @@
     <div>
       <%= link_to 'Category List', admin_categories_path %>
     </div>
+    <br>
     <div class="col-md-12">
       <div class="form-inline">
         <%= form_for [:admin, @category] do |f| %>
@@ -12,6 +13,7 @@
           <%= f.submit class:"btn btn-primary" %>
         <% end %>
       </div>
+      <br>
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
@@ -24,7 +26,12 @@
           <tr>
             <td><%= category.name %></td>
             <td>
-              <%= link_to 'Edit', admin_categories_path(id:category.id) %>
+              <div class="col-md-2">
+                <%= link_to 'Edit', admin_categories_path(id:category.id),class: "btn-bs-file btn btn-xs btn-success" %>
+              </div>
+              <div class="col-md-2">
+                <%= link_to 'Delete', admin_category_path(category), method: :delete, data: { confirm: "Are you sure?" }, class: "btn-bs-file btn btn-xs btn-danger" %>
+              </div>          
             </td>              
           </tr>
         <% end %>
