--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,8 +1,13 @@
 <div class="container">
   <div class="row">
-    <div>
-      <%= link_to 'Category List', admin_categories_path %>
-    </div>
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <%= link_to 'Category List', admin_categories_path, class: "active"%>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'User List', admin_users_path%>
+        </li>
+      </ul>
     <br>
     <div class="col-md-12">
       <div class="form-inline">
