--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,20 +1,35 @@
 <div class="container">
   <div class="row">
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <%= link_to 'Category List', admin_categories_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'User List', admin_users_path, class: "nav-link active" %>
+      </li>
+    </ul>
     <br>
     <div class="col-md-12">
       <br>
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
-            <th>Email</th>
+            <th>User Name</th>
+            <th>User Email</th>
             <th>Role</th>
           </tr>
         </thead>
         <tbody>
         <% @users.each do |user| %>
           <tr>
+            <td><%= user.name %></td>
             <td><%= user.email %></td>
-             
+            <td>
+              <%= form_for [:admin, user] do |f| %>
+                <%= f.select(:role, [['Select Role', ''],['Normal','normal'],['Admin','admin']])%>
+              <%= f.submit 'Update' %>
+              <% end %>
+            </td>
           </tr>
         <% end %>
         </tbody>
