--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,12 @@
 </div>
 <div class="row-padding">
 <!-- category button -->
-
+<ul class="nav nav-pills">
+  <li class="active"><%= link_to "All", root_path %></li>
+  <% @categories.each do |category| %>
+   <li><%= link_to category.name,category_path(category) %></li>
+  <% end %>
+</ul>
 <!-- 顯示post -->
   <table class="table">
     <thead class="thead-dark">
