--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,9 +6,11 @@
 <div class="row-padding">
 <!-- category button -->
 <ul class="nav nav-pills">
-  <li class="active"><%= link_to "All", root_path %></li>
-  <% @categories.each do |category| %>
-   <li><%= link_to category.name,category_path(category) %></li>
+  <li><%= link_to "All", root_path %></li>
+    <% @categories.each do |category| %>
+  <li class="<%="active" if category == @category%> ">
+    <%= link_to category.name,category_path(category) %>
+  </li>
   <% end %>
 </ul>
 <!-- 顯示post -->
@@ -16,4 +18,3 @@
   <!-- kaminari -->
   <%= paginate @posts %>
 </div>
-
