--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -3,8 +3,8 @@
 }
 
 .index-title {
-  margin: 0px 30px;
-  padding: 10px 0px 20px 0px;
+  margin-bottom: 20px;
+  padding: 10px 10px 20px 10px;
 }
 
 .row-padding {
