--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,7 @@
     <h1><%= @post.title %></h1>
   </div>
 </div>
+<!-- post -->
 <div class="container">
   <div class="media">
 <!-- left -->
@@ -11,23 +12,33 @@
     </div>
 <!-- right -->
     <div class="col-md-9">
-      <%= image_tag @post.image.url , width: "400px", hight: "300px" %>
+      <div class="form-group">
+        <%= image_tag @post.image.url , width: "400px", hight: "300px" %>
+        <%= link_to 'Back to index', posts_path %>
         <p class="text-muted">
-        <%= @post.description  %>
-      </p>
-      <%= link_to 'Back to index', posts_path %>
-<!-- create comment -->
-      <div class="row">
-        <%= form_for [@post, @comment] do |f| %>
-        <div class="form-group">
-          <%= f.text_area :content, placeholder: "Say somethings...", class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.submit class: "btn btn-primary" %>
-        </div>
-        <% end %>
+          <%= @post.description  %>
+        </p>
+      </div>
+<!-- show comment -->
+      <div class="form-group">
+        <p class="text-muted">
+          <% @post.comments.each do |comment| %>
+            <%= simple_format comment.content, class: "text-muted" %>          
+          <% end %>
+        </p>
       </div>
     </div><!-- col-md-9 -->
+<!-- create comment -->
+ <div class="form-group">
+  <%= form_for [@post, @comment] do |f| %>
+    <div class="form-group">
+      <p><%= f.text_area :content, placeholder: "Say somethings...", class: "form-control" %></p>
+    </div>
+    <div class="form-group">
+      <%= f.submit class: "btn btn-primary" %>
+    </div>
+  <% end %>
+  </div> 
 
   </div><!-- media -->
-</div>
+</div><!-- container -->
