--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,13 +24,16 @@
         <p class="text-muted">
           <% @post.comments.each do |comment| %>
             <%= simple_format comment.content, class: "text-muted" %> 
+            <div class="form-group" style="text-align: right;">
             <%if comment.user == current_user %>
               <%= link_to "Edit", post_path(id: @post.id,c_id: comment.id) %>
               <%= link_to "Delete", post_comment_path(@post, comment), method: :delete %>        
-            <% end %>         
+            <% end %> 
+            </div>        
           <% end %>
         </p>
       </div>
+      <%= paginate @comments %>
     </div><!-- col-md-9 -->
 <!-- create comment -->
  <div class="form-group">
@@ -43,6 +46,5 @@
     </div>
   <% end %>
   </div> 
-
   </div><!-- media -->
 </div><!-- container -->
