--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
 <!-- right -->
       <div class="col-md-9">
         <div class="form-group">
-          <%= image_tag @post.image , width: "400px", hight: "300px" if @post.image? %>
+          <%= image_tag @post.image.url , width: "400px", hight: "300px" if @post.image? %>
           <%= link_to 'Back to index', posts_path %>
           <p class="text-muted">
             <%= @post.description  %>
