--- a/app/views/shared/_posts_list.html.erb
+++ b/app/views/shared/_posts_list.html.erb
@@ -10,7 +10,7 @@
     <tbody>
       <% @posts.each do |post| %>
         <tr>
-          <td scope="row"><%= post.replies_count %></td>
+          <td scope="row"><%= post.comments.size %></td>
           <td><%= link_to post.title, post_path(post) %></td>
           <td><%= post.created_at.strftime('%Y-%m-%d') %></td> 
           <td><%= post.viewed_count %></td>
