--- a/app/views/shared/_posts_list.html.erb
+++ b/app/views/shared/_posts_list.html.erb
@@ -1,7 +1,9 @@
 <table class="table">
     <thead class="thead-dark">
       <tr>
-        <th>Replies count</th>
+        <th>
+          <%= sort_link(@q, :replies_count, 'Replies count', default_order: :desc) %>
+        </th>
         <th>Title</th>
         <th>Last replied at</th>
         <th>Viewed count</th>
@@ -10,7 +12,7 @@
     <tbody>
       <% @posts.each do |post| %>
         <tr>
-          <td scope="row"><%= post.comments.size %></td>
+          <td><%= post.comments.size %></td>
           <td><%= link_to post.title, post_path(post) %></td>
           <td><%= post.created_at.strftime('%Y-%m-%d') %></td> 
           <td><%= post.viewed_count %></td>
