User can sort all posts by viewed count

--- a/app/views/shared/_posts_list.html.erb
+++ b/app/views/shared/_posts_list.html.erb
@@ -8,7 +8,10 @@
         <th>
           <%= sort_link(@q, :updated_at, 'Last replied at', default_order: :desc) %>    
         </th>
-        <th>Viewed count</th>
+        <th>
+          <%= sort_link(@q, :viewed_count, 'Viewed count',default_order: :desc) %>
+        
+        </th>
       </tr>
     </thead>
     <tbody>
