User can sort classified posts by replies_count , last_replied_time and viewed_count

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -45,6 +45,7 @@
             <div class="form-group">
               <p class="text-muted">
                 <%= comment.created_at %>
+                [<%= comment.id %>]
                 <%= simple_format comment.content, class: "text-muted" %> 
                 <div class="form-group" style="text-align: right;">
                 <%if comment.user == current_user %>
