--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,10 @@
 <!-- profile lebel -->
     <ul class="nav nav-tabs">
       <li role="presentation" class="active">
-        <%= link_to "My Post" %>
+        <%= link_to "My Post", user_path %>
       </li>
       <li role="presentation">
-        <%= link_to "My Comment" %>
+        <%= link_to "My Comment", mycomments_user_path %>
       </li>
       <li role="presentation">
         <%= link_to "My Collect" %>
@@ -21,26 +21,27 @@
         <%= link_to "My Friend" %>
       </li>            
     </ul>
+    <br>
 <!-- profile content -->
 <div class="container">
   <div class="row">
     <div class="container">
       <table class="table">
-        <% @posts.each do |post| %>
-            <tbody>
-              <tr>
-                <td><%= post.title %></td>
-                <td><%= "post status" %></td>
-                <td><%= post.created_at.strftime('%Y-%m-%d') %></td>              
-              </tr>
-            </tbody>
-        <% end %>
+        <tbody>
+         <% @posts.each do |post| %>     
+          <tr>
+            <td><%= post.title %></td>
+            <td><%= "post status" %></td>
+            <td><%= post.created_at.strftime('%Y-%m-%d') %></td>              
+          </tr>
+         <% end %>
+        </tbody>
       </table>   
     </div>
   </div>
 </div>
 <!-- new post btn -->
 <br>
-    <%= render partial: "shared/btn_new_post" %>
+    <%= render partial: "shared/btn/btn_new_post" %>
   </div><!-- row -->
 </div><!-- container -->
