User can update user avatar using CarrierWave and modify user avatar display

--- a/app/views/shared/profile/_user_info.html.erb
+++ b/app/views/shared/profile/_user_info.html.erb
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="text-center">
-            <%= image_tag @user.avatar, width: "100px", height: "100px" if @user.avatar? %>
+            <%= image_tag @user.avatar.url, width: "100px", height: "100px" if @user.avatar? %>
           </div>
         </div>
         <div class="col-md-8">
