--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
 <!-- post -->
     <div class="row">
       <div class="col-md-3">
-        <%= image_tag @post.user.avatar, width: "100px", height: "100px" if @post.user.avatar? %>
+        <%= image_tag @post.user.avatar.url, width: "100px", height: "100px" if @post.user.avatar? %>
         <div>
           <%= @post.user.name %>
         </div>
