--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -26,7 +26,7 @@
             <td><%= user.name %></td>
             <td><%= user.email %></td>
             <td>
-              <%= image_tag user.avatar, width: "100px", height: "100px" if user.avatar? %>
+              <%= image_tag user.avatar.url, width: "100px", height: "100px" if user.avatar? %>
             </td>
             <td>
               <%= form_for [:admin, user] do |f| %>
