--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -36,7 +36,7 @@
     <% @comments.each do |comment| %>
       <div class="row">
           <div class="col-md-3">
-            <%= image_tag comment.user.avatar, width: "100px", height: "100px" if comment.user.avatar? %>
+            <%= image_tag comment.user.avatar.url, width: "100px", height: "100px" if comment.user.avatar? %>
             <div>
               <%= comment.user.name %>
             </div>
