--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -38,7 +38,10 @@
     <div class="form-group">
       <br>
       <div class="col-md-2"></div>
-      <div class="col-md-4"><%= f.submit %></div>
+      <div class="col-md-4">
+        <%= f.submit "Publish", class: "btn btn-primary" %>
+        <%= f.submit "Save a Draft", class: "btn btn-default" %>       
+      </div>
     </div>
   <% end %>
 </div>
