--- a/app/views/shared/_posts_list.html.erb
+++ b/app/views/shared/_posts_list.html.erb
@@ -21,7 +21,7 @@
           <td><%= post.comments.size %></td>
           <td><%= link_to post.title, post_path(post) %></td>
           <td>
-            <%= post.comments.last.created_at.strftime('%Y-%m-%d') %>
+            <%= post.replied_at.strftime('%Y-%m-%d') %>
           </td> 
           <td><%= post.viewed_count %></td>
         </tr>
