--- a/app/views/users/mycomments.html.erb
+++ b/app/views/users/mycomments.html.erb
@@ -15,7 +15,7 @@
         <%= link_to "My Collect" %>
       </li>
       <li role="presentation">
-        <%= link_to "My Draft" %>
+        <%= link_to "My Draft", mydrafts_user_path %>
       </li>
       <li role="presentation">
         <%= link_to "My Friend" %>
