--- a/app/views/users/mycomments.html.erb
+++ b/app/views/users/mycomments.html.erb
@@ -39,12 +39,14 @@
                     </div>              
                   </div>                  
                 </div>
-                <div class="col-md-2">
-                  <%= link_to "Edit", post_path(id: comment.post.id,c_id: comment.id) %>
-                </div>
-                <div class="col-md-2">
-                  <%= link_to "Delete", post_comment_path(comment.post, comment), method: :delete %>                  
-                </div>
+                <% if comment.user == current_user %>    
+                  <div class="col-md-2">
+                    <%= link_to "Edit", post_path(id: comment.post.id,c_id: comment.id) %>
+                  </div>
+                  <div class="col-md-2">
+                    <%= link_to "Delete", post_comment_path(comment.post, comment), method: :delete %>                  
+                  </div>
+                <% end %>
               </div>
             </td>
           </tr>
