--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,8 +31,14 @@
          <% @posts.each do |post| %>     
           <tr>
             <td><%= post.title %></td>
-            <td><%= "post status" %></td>
-            <td><%= post.created_at.strftime('%Y-%m-%d') %></td>              
+            <td><%= "Published" if post %></td>
+            <td><%= post.created_at.strftime('%Y-%m-%d') %></td>
+            <% if post.user == current_user %>
+            <td>
+              <%= link_to "Edit", edit_post_path(post) %>
+              <%= link_to "Delete", post_path(post), method: :delete, data: {confirm: "Are you sure?"} %>  
+            </td> 
+            <% end %>             
           </tr>
          <% end %>
         </tbody>
