--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -14,7 +14,7 @@
 
     </div>
     <div class="form-group">
-      <%= f.submit %>
-    </div>
+      <%= f.submit "Publish", class: "btn btn-primary" %>
+      <%= f.submit "Save a Draft", class: "btn btn-default" %>    </div>
   <% end %>
 </div>
