User can click user name to view other user profile page and if user is not current user only to view user posts and comments

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,15 +11,17 @@
       <li role="presentation">
         <%= link_to "My Comment", mycomments_user_path %>
       </li>
-      <li role="presentation">
-        <%= link_to "My Collect" %>
-      </li>
-      <li role="presentation">
-        <%= link_to "My Draft", mydrafts_user_path %>
-      </li>
-      <li role="presentation">
-        <%= link_to "My Friend" %>
-      </li>            
+      <% if @user == current_user %>
+        <li role="presentation">
+          <%= link_to "My Collect" %>
+        </li>
+        <li role="presentation">
+          <%= link_to "My Draft", mydrafts_user_path %>
+        </li>
+        <li role="presentation">
+          <%= link_to "My Friend" %>
+        </li>
+      <% end %>            
     </ul>
     <br>
 <!-- profile content -->
