--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><%= link_to 'Feeds' %></li>
+          <li><%= link_to 'Feeds', feeds_posts_path %></li>
           <li><%= link_to 'All-Post', root_path %></li>
           <li><%= link_to 'New-Post', new_post_path %></li>
         </ul>
