--- a/app/views/posts/feeds.html.erb
+++ b/app/views/posts/feeds.html.erb
@@ -24,19 +24,18 @@
   <br>
 </div>
 <div class="container">
-  <div class="col-md-10">
     <div class="row">
         <div class="col-md-6">
           <div class="panel panel-default">
-            <div class="panel-heading">Chatterbox</div>
+            <div class="panel-heading text-center">Chatterbox</div>
             <div class="panel-body">
-              <table>
+              <table class="col-md-12">
                   <% i = 0 %>
                   <% @popular_users.each do |user| %>
                     <tr>
-                      <td><%= i += 1 %></td>
-                      <td><%= user.name %></td>
-                      <td><%= user.user_count %></td>
+                      <td class="col-md-4 text-center"><%= i += 1 %></td>
+                      <td class="col-md-4 text-center"><%= user.name %></td>
+                      <td class="col-md-4 text-center"><%= user.user_count %></td>
                     </tr>
                   <% end %>
               </table>
@@ -45,15 +44,15 @@
         </div>
         <div class="col-md-6">
           <div class="panel panel-default">
-            <div class="panel-heading">Most Popular Post</div>
+            <div class="panel-heading text-center">Most Popular Post</div>
             <div class="panel-body">
-              <table>
+              <table class="col-md-12">
                   <% i = 0 %>
                   <% @popular_posts.each do |post| %>
                     <tr>
-                      <td><%= i += 1 %></td>
-                      <td><%= post.title %></td>
-                      <td><%= post.replies_count %></td>
+                      <td class="col-md-4 text-center"><%= i += 1 %></td>
+                      <td class="col-md-4 text-center"><%= post.title %></td>
+                      <td class="col-md-4 text-center"><%= post.created_at.strftime('%Y-%m-%d') %></td>
                     </tr>
                   <% end %>
               </table>
@@ -61,5 +60,4 @@
           </div>          
         </div>
     </div>
-  </div>
 </div>
